<resources>
    <string name="app_name">TagesBlüte</string>
    <string name="TagesBlüte">Tagesblüte</string>
    <string name="registrieren">Ich habe noch kein Konto</string>
    <string name="login">Ich habe bereits ein Konto</string>
    <string name="bestätigen">Bestätigen</string>
    <string name="tagesbl_te">TagesBlüte</string>
    <string name="anmelden">Anmelden</string>
    <string name="passwort_eingeben">Passwort eingeben</string>
    <string name="passwort">Passwort</string>
    <string name="nutzername">Nutzername</string>
    <string name="z_b_vorname_nachname">z.B vorname.nachname</string>
    <string name="passwort_erneut_eingeben">Passwort erneut eingeben</string>
    <string name="passwort_wiederholen">Passwort wiederholen</string>
    <string name="heute">Heute</string>
    <string name="tagesplan">Tagesplan</string>
    <string name="mein_garten">Mein Garten</string>
    <string name="notfallkontakt">Notfallkontakte</string>
    <string name="willkommen">Willkommen!</string>
    <string name="heutige_aufgaben">Heutige Aufgaben</string>
    <string name="uhrzeit">Uhrzeit</string>
    <string name="datum">Datum</string>
    <string name="titel">Titel der neuen Aufgabe\n</string>
    <string name="neue_aufgabe_hinzufuegen">Neue Aufgabe</string>
    <string name="buttonAufgabeBearbeiten">Aufgabe bearbeiten</string>
    <string name="buttonAufgabeLöschen">Aufgabe löschen</string>
    <string name="erledigt">Erledigt</string>
    <string name="notfallkontakt_verwalten">Notfallkontakt verwalten</string>
    <string name="vorname">Vorname</string>
    <string name="nachname">Nachname</string>
    <string name="verh_ltnis_z_b_ehepartner_tochter">Verhältnis (z.B. Ehepartner, Tochter/Sohn)</string>
    <string name="telefonnummer">Telefonnummer des Notfallkontakts</string>
    <string name="vorschau_der_nachricht">Vorschau der Nachricht:</string>
    <string name="bearbeiten">Bearbeiten</string>
    <string name="alarm_abbrechen">ALARM ABBRECHEN</string>
    <string name="logout">Abmelden</string>
    <string name="Sturznachricht_wird_gesendet">STURZ ERKANNT\nSMS wird in 30 Sekunden an Notfallkontakt gesendet!</string>
    <string name="ueberschrift_mein_garten">Mein Garten</string>
    <string name="datum_text">Montag, 1.1.2025</string>
    <string name="aenderung_speichern">Änderung speichern</string>
    <string-array name="wiederholungsoption"><item>Einmalig</item><item>Täglich</item><item>Wöchentlich</item>
    </string-array>
</resources>