<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/textTagesplan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/tagesplan"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textHeutigeAufgaben"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTagesplan"
        android:layout_marginTop="16dp"
        android:text="@string/heutige_aufgaben"
        android:textSize="25sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAufgaben"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/textHeutigeAufgaben"
        android:layout_above="@id/buttonGrid"
        android:layout_marginTop="12dp" />

    <LinearLayout
        android:id="@+id/buttonGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/buttonAufgabeBearbeiten"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/petrolDunkel"
                android:text="@string/buttonAufgabeBearbeiten"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/buttonAufgabeLöschen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/petrolDunkel"
                android:text="@string/buttonAufgabeLöschen"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/buttonAufgabeErledigen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/petrolMittel"
                android:text="@string/erledigt"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/buttonNeueAufgabe"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/petrolMittel"
                android:drawablePadding="8dp"
                android:text="@string/neue_aufgabe_hinzufuegen"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

