<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:paddingTop="20dp"
        android:id="@+id/welcomeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/willkommen"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Montag, 1.1.2025"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        android:layout_marginTop="4dp" />

    <LinearLayout
        android:paddingTop="350dp"
        android:id="@+id/buttonColumn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/baumImage"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp">

        <Button
            android:id="@+id/buttonTagesplan"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:text="@string/tagesplan"
            />

        <Button
            android:id="@+id/buttonMeinGarten"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/mein_garten"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/buttonNotfallkontakte"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/notfallkontakt"
            />
    </LinearLayout>


    <ImageView
        android:id="@+id/baumImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/logo_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonColumn"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>